--- a/cristianTrives/PArticulo/PArticulo/PArticulo.csproj
+++ b/cristianTrives/PArticulo/PArticulo/PArticulo.csproj
@@ -75,6 +75,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlClass.cs" />
     <Compile Include="App.cs" />
+    <Compile Include="MiClassDb.cs" />
+    <Compile Include="QueryResult.cs" />
+    <Compile Include="PersisterHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
