--- a/cristianTrives/PSerpisTrives/PSerpisTrives/PSerpisTrives.csproj
+++ b/cristianTrives/PSerpisTrives/PSerpisTrives/PSerpisTrives.csproj
@@ -5,10 +5,10 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{8941EE14-E7E4-4A52-B8C5-8404525B5EE7}</ProjectGuid>
+    <ProjectGuid>{E9C25C45-F13D-472B-A766-344650A10C04}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>PSerpisAd</RootNamespace>
-    <AssemblyName>PSerpisAd</AssemblyName>
+    <RootNamespace>PSerpisTrives</RootNamespace>
+    <AssemblyName>PSerpisTrives</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,15 +30,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="MySql.Data">
-      <HintPath>..\..\..\..\..\..\usr\lib\cli\MySql.Data-6.4\MySql.Data.dll</HintPath>
-    </Reference>
     <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
-      <Private>False</Private>
-      <Package>gtk-sharp-2.0</Package>
-    </Reference>
-    <Reference Include="atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Private>False</Private>
       <Package>gtk-sharp-2.0</Package>
     </Reference>
@@ -46,17 +38,22 @@
       <Private>False</Private>
       <Package>gtk-sharp-2.0</Package>
     </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
+      <Private>False</Private>
+      <Package>gtk-sharp-2.0</Package>
+    </Reference>
+    <Reference Include="PSerpisAd">
+      <HintPath>..\..\PSerpisAd\PSerpisAd\bin\Debug\PSerpisAd.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="App.cs" />
-    <Compile Include="PersisterHelper.cs" />
-    <Compile Include="QueryResult.cs" />
-    <Compile Include="TreeViewHelper.cs" />
-    <Compile Include="ComboBoxHelper.cs" />
+    <Compile Include="TreeViewHelperGenericGraphic.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Folder Include="Raw\" />
+    <EmbeddedResource Include="delete.png" />
+    <EmbeddedResource Include="edit.png" />
   </ItemGroup>
 </Project>
